packages/picimo-toolkit/src/picimoParser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = peg$otherExpectation("picimo-lang"),
      peg$c1 = function(statements) {
          return compact(statements);
        },
      peg$c2 = peg$otherExpectation("top-level statement"),
      peg$c3 = function(statement) {
            return statement;
          },
      peg$c4 = peg$otherExpectation("statement"),
      peg$c5 = function(type, name, verb, subject) { return { verb: verb, subject: subject }; },
      peg$c6 = function(type, name, extension, block) {
          block.type = "declaration",
          block.name = name;
          block.declarationType = type;
          if (extension) {
            block.verb = extension.verb;
            block.subject = extension.subject;
          }
          return block;
        },
      peg$c7 = "vertexobject",
      peg$c8 = peg$literalExpectation("VertexObject", true),
      peg$c9 = "primitive",
      peg$c10 = peg$literalExpectation("Primitive", true),
      peg$c11 = "spritegroup",
      peg$c12 = peg$literalExpectation("SpriteGroup", true),
      peg$c13 = function(type) { return type.toLowerCase(); },
      peg$c14 = "instantiates",
      peg$c15 = peg$literalExpectation("instantiates", true),
      peg$c16 = function(verb) { return verb.toLowerCase(); },
      peg$c17 = function(name, args, block) {
          block.name = name;
          if (args) {
            block.args = args;
          }
          return block;
        },
      peg$c18 = function(type, a) { return a; },
      peg$c19 = function(type, anno, statements) {
            var block = {
              type: "dataBlock",
              data: compact(statements)
            };
            if (type) block.dataType = type;
            if (anno.length) anno.forEach(copyAsAnnotation.bind(null, block));
            return block;
          },
      peg$c20 = "{",
      peg$c21 = peg$literalExpectation("{", false),
      peg$c22 = "}",
      peg$c23 = peg$literalExpectation("}", false),
      peg$c24 = peg$otherExpectation("constant statement"),
      peg$c25 = "=",
      peg$c26 = peg$literalExpectation("=", false),
      peg$c27 = function(name, value) { writeConstant(name, value); },
      peg$c28 = peg$otherExpectation("property-call statement"),
      peg$c29 = "@",
      peg$c30 = peg$literalExpectation("@", false),
      peg$c31 = function(name, args) {
          var props = {
            type: "propertyCall",
            name: name
          }
          if (args) props.args = args;
          return props;
        },
      peg$c32 = peg$otherExpectation("property call arguments list"),
      peg$c33 = "(",
      peg$c34 = peg$literalExpectation("(", false),
      peg$c35 = ",",
      peg$c36 = peg$literalExpectation(",", false),
      peg$c37 = function(head, a) { return a; },
      peg$c38 = ")",
      peg$c39 = peg$literalExpectation(")", false),
      peg$c40 = function(head, tail) {
          return [head].concat(tail);
        },
      peg$c41 = peg$otherExpectation("property call argument"),
      peg$c42 = function(value) {
          return value;
        },
      peg$c43 = peg$otherExpectation("named arguments list"),
      peg$c44 = peg$otherExpectation("named argument"),
      peg$c45 = ":",
      peg$c46 = peg$literalExpectation(":", false),
      peg$c47 = function(name, value) {
          return {
            name: name,
            value: value
          };
        },
      peg$c48 = peg$otherExpectation("data statement"),
      peg$c49 = function(name, args, type, a0) { return a0; },
      peg$c50 = function(name, args, type, anno0, value, a1) { return a1; },
      peg$c51 = function(name, args, type, anno0, value, anno1) {
          var data = {
            type: "data",
            name: name
          }
          if (args) data.args = args;
          if (value != null) data.value = value;
          if (type) data.valueType = type;
          if (anno0.length) anno0.forEach(copyAsAnnotation.bind(null, data));
          if (anno1.length) anno1.forEach(copyAsAnnotation.bind(null, data));
          return data;
        },
      peg$c52 = peg$otherExpectation("data value type"),
      peg$c53 = "float32",
      peg$c54 = peg$literalExpectation("float32", false),
      peg$c55 = "int32",
      peg$c56 = peg$literalExpectation("int32", false),
      peg$c57 = "int16",
      peg$c58 = peg$literalExpectation("int16", false),
      peg$c59 = "int8",
      peg$c60 = peg$literalExpectation("int8", false),
      peg$c61 = "uint32",
      peg$c62 = peg$literalExpectation("uint32", false),
      peg$c63 = "uint16",
      peg$c64 = peg$literalExpectation("uint16", false),
      peg$c65 = "uint8",
      peg$c66 = peg$literalExpectation("uint8", false),
      peg$c67 = function(type) {
          return type;
        },
      peg$c68 = function(val) {
          return val;
        },
      peg$c69 = "false",
      peg$c70 = peg$literalExpectation("false", false),
      peg$c71 = function() { return false; },
      peg$c72 = "no",
      peg$c73 = peg$literalExpectation("no", false),
      peg$c74 = "off",
      peg$c75 = peg$literalExpectation("off", false),
      peg$c76 = "true",
      peg$c77 = peg$literalExpectation("true", false),
      peg$c78 = function() { return true; },
      peg$c79 = "on",
      peg$c80 = peg$literalExpectation("on", false),
      peg$c81 = "yes",
      peg$c82 = peg$literalExpectation("yes", false),
      peg$c83 = "null",
      peg$c84 = peg$literalExpectation("null", false),
      peg$c85 = function() { return null;  },
      peg$c86 = function(expr) {
          return expr;
        },
      peg$c87 = peg$otherExpectation("value array"),
      peg$c88 = function(head, v) { return v; },
      peg$c89 = function(head, tail) {
               return [head].concat(tail);
            },
      peg$c90 = function(values) { return values || []; },
      peg$c91 = "[",
      peg$c92 = peg$literalExpectation("[", false),
      peg$c93 = "]",
      peg$c94 = peg$literalExpectation("]", false),
      peg$c95 = "+",
      peg$c96 = peg$literalExpectation("+", false),
      peg$c97 = "-",
      peg$c98 = peg$literalExpectation("-", false),
      peg$c99 = function(head, tail) {
            return tail.reduce(function(result, element) {
              if (element[1] === "+") { return result + element[3]; }
              if (element[1] === "-") { return result - element[3]; }
            }, head);
          },
      peg$c100 = "*",
      peg$c101 = peg$literalExpectation("*", false),
      peg$c102 = "/",
      peg$c103 = peg$literalExpectation("/", false),
      peg$c104 = function(head, tail) {
            return tail.reduce(function(result, element) {
              if (element[1] === "*") { return result * element[3]; }
              if (element[1] === "/") { return result / element[3]; }
            }, head);
          },
      peg$c105 = function(expr) { return expr; },
      peg$c106 = function(minus, name) {
          var val = readConstant(name);
           return minus ? -val : val;
        },
      peg$c107 = peg$otherExpectation("number"),
      peg$c108 = function() { return parseFloat(text()); },
      peg$c109 = ".",
      peg$c110 = peg$literalExpectation(".", false),
      peg$c111 = /^[1-9]/,
      peg$c112 = peg$classExpectation([["1", "9"]], false, false),
      peg$c113 = /^[eE]/,
      peg$c114 = peg$classExpectation(["e", "E"], false, false),
      peg$c115 = "0",
      peg$c116 = peg$literalExpectation("0", false),
      peg$c117 = peg$otherExpectation("string"),
      peg$c118 = function(chars) { return chars.join(""); },
      peg$c119 = "\"",
      peg$c120 = peg$literalExpectation("\"", false),
      peg$c121 = "\\",
      peg$c122 = peg$literalExpectation("\\", false),
      peg$c123 = "b",
      peg$c124 = peg$literalExpectation("b", false),
      peg$c125 = function() { return "\b"; },
      peg$c126 = "f",
      peg$c127 = peg$literalExpectation("f", false),
      peg$c128 = function() { return "\f"; },
      peg$c129 = "n",
      peg$c130 = peg$literalExpectation("n", false),
      peg$c131 = function() { return "\n"; },
      peg$c132 = "r",
      peg$c133 = peg$literalExpectation("r", false),
      peg$c134 = function() { return "\r"; },
      peg$c135 = "t",
      peg$c136 = peg$literalExpectation("t", false),
      peg$c137 = function() { return "\t"; },
      peg$c138 = "u",
      peg$c139 = peg$literalExpectation("u", false),
      peg$c140 = function(digits) {
                return String.fromCharCode(parseInt(digits, 16));
              },
      peg$c141 = function(sequence) { return sequence; },
      peg$c142 = /^[^\0-\x1F"\\]/,
      peg$c143 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false),
      peg$c144 = /^[a-z]/i,
      peg$c145 = peg$classExpectation([["a", "z"]], false, true),
      peg$c146 = function(firstChar) { return text(); },
      peg$c147 = function(firstChar, chars) { return firstChar + ((chars && flatten(chars)) || ''); },
      peg$c148 = /^[_a-z0-9\-]/i,
      peg$c149 = peg$classExpectation(["_", ["a", "z"], ["0", "9"], "-"], false, true),
      peg$c150 = peg$otherExpectation("whitespaces with optional line breaks"),
      peg$c151 = /^[ \t\n\r]/,
      peg$c152 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c153 = peg$otherExpectation("whitespaces"),
      peg$c154 = /^[ \t]/,
      peg$c155 = peg$classExpectation([" ", "\t"], false, false),
      peg$c156 = peg$otherExpectation("new line"),
      peg$c157 = "\n",
      peg$c158 = peg$literalExpectation("\n", false),
      peg$c159 = "\r\n",
      peg$c160 = peg$literalExpectation("\r\n", false),
      peg$c161 = "\r",
      peg$c162 = peg$literalExpectation("\r", false),
      peg$c163 = "\f",
      peg$c164 = peg$literalExpectation("\f", false),
      peg$c165 = /^[0-9]/,
      peg$c166 = peg$classExpectation([["0", "9"]], false, false),
      peg$c167 = /^[0-9a-f]/i,
      peg$c168 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parsews();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsetop_level_statement();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsetop_level_statement();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c0); }
    }

    return s0;
  }

  function peg$parsetop_level_statement() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseconst_statement();
    if (s1 === peg$FAILED) {
      s1 = peg$parsedeclaration();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsenl();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parsestatement() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parsenamed_data_block();
    if (s1 === peg$FAILED) {
      s1 = peg$parsedata_statement();
      if (s1 === peg$FAILED) {
        s1 = peg$parseproperty_statement();
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsenl();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }

    return s0;
  }

  function peg$parsedeclaration() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parsedeclaration_type();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsename();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$currPos;
            s6 = peg$parsedeclaration_verb();
            if (s6 !== peg$FAILED) {
              s7 = peg$parse_();
              if (s7 !== peg$FAILED) {
                s8 = peg$parsename();
                if (s8 !== peg$FAILED) {
                  peg$savedPos = s5;
                  s6 = peg$c5(s1, s3, s6, s8);
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsedata_block();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c6(s1, s3, s5, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedeclaration_type() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 12).toLowerCase() === peg$c7) {
      s1 = input.substr(peg$currPos, 12);
      peg$currPos += 12;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }
    if (s1 === peg$FAILED) {
      if (input.substr(peg$currPos, 9).toLowerCase() === peg$c9) {
        s1 = input.substr(peg$currPos, 9);
        peg$currPos += 9;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 11).toLowerCase() === peg$c11) {
          s1 = input.substr(peg$currPos, 11);
          peg$currPos += 11;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c13(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsedeclaration_verb() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 12).toLowerCase() === peg$c14) {
      s1 = input.substr(peg$currPos, 12);
      peg$currPos += 12;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c16(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsenamed_data_block() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsename();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsenamed_arguments_list();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsedata_block();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c17(s1, s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedata_block() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsedata_value_type();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseproperty_statement();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c18(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseproperty_statement();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c18(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsebegin_block();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsestatement();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsestatement();
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseend_block();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c19(s1, s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsebegin_block() {
    var s0, s1, s2, s3;
